# matrixmultiply

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  build.rs
benches/: my_benchmark.rs
src/: dgemm.rs  flop_measurement.rs  lib.rs  main.rs  ref_dgemm.rs
